disable cpu integ tests due to gh hanging issues

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -143,14 +143,14 @@ jobs:
       fail-fast: false
       matrix:
         test:
-          - test: TestCpuFull
-            instance: ubuntu-latest
-            gh-runner: true
-            failure-prefix: cpu
-          - test: TestCpuBoth
-            instance: ubuntu-latest
-            gh-runner: true
-            failure-prefix: cpu
+#          - test: TestCpuFull
+#            instance: ubuntu-latest
+#            gh-runner: true
+#            failure-prefix: cpu
+#          - test: TestCpuBoth
+#            instance: ubuntu-latest
+#            gh-runner: true
+#            failure-prefix: cpu
           - test: TestGpu
             instance: g6
             failure-prefix: gpu
